--- a/payment3.html
+++ b/payment3.html
@@ -12,34 +12,37 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
   <header id="header">
-    <div class="container">
-      <nav id="main-nav" class="py-1">
-        <h5 class="main-nav-logo">
-          <a href="index.html" id="logo"><i class="fas fa-layer-group"></i> MANDALA INN</a>
-        </h5>
+    <div class="header-container">
+      <nav class="main-nav" class="py-1">
+        <div class="main-logo-box">
+          <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
+            <i class="fas fa-layer-group">
+            </i> MANDALA INN
+          </a>
+        </div>
         <ul class="nav-bar">
           <li>
-            <a href="index.html"> Trang chủ</a>
+            <a href="index.html" class="current" target="_blank"> Trang chủ</a>
           </li>
           <li>
-            <a href="endow_details.html"> Khuyến mại</a>
+            <a href="endow_details.html" target="_blank"> Khuyến mại</a>
           </li>
           <li>
-            <a href="news.html"> Tin tức</a>
+            <a href="news.html" target="_blank"> Tin tức</a>
           </li>
           <li>
-            <a href="index.html"> Giới thiệu</a>
+            <a href="index.html" target="_blank"> Giới thiệu</a>
           </li>
           <li>
-            <a href="news.html"> Liên hệ</a>
+            <a href="news.html" target="_blank"> Liên hệ</a>
           </li>
           <li>
-            <a href="index.html">
+            <a href="index.html" target="_blank">
               <i class="fas fa-globe-americas"></i>
               <i class="fas fa-sort-down"></i> Vietnamese
             </a>
@@ -48,13 +51,18 @@
             </ul>
           </li>
           <li>
-            <a href="index.html"><i class="fas fa-user"></i> Đăng nhập</a>
+            <a href="index.html" target="_blank"><i class="fas fa-user"></i> Đăng nhập</a>
           </li>
           <li>
-            <a href="index.html"><i class="fas fa-user-plus"></i> Đăng ký</a>
+            <a href="index.html" target="_blank"><i class="fas fa-user-plus"></i> Đăng ký</a>
           </li>
         </ul>
       </nav>
+      <div class="show-bars d-hidden">
+        <div class="show-bar show-bar-1"></div>
+        <div class="show-bar show-bar-2"></div>
+        <div class="show-bar show-bar-3"></div>
+      </div>
     </div>
   </header>
   <!-- payment section -->
