--- a/search_results.html
+++ b/search_results.html
@@ -12,34 +12,37 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-  
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
   <header id="header">
-    <div class="container">
-      <nav id="main-nav" class="py-1">
-        <h5 class="main-nav-logo">
-          <a href="index.html" id="logo"><i class="fas fa-layer-group"></i> MANDALA INN</a>
-        </h5>
+    <div class="header-container">
+      <nav class="main-nav" class="py-1">
+        <div class="main-logo-box">
+          <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
+            <i class="fas fa-layer-group">
+            </i> MANDALA INN
+          </a>
+        </div>
         <ul class="nav-bar">
           <li>
-            <a href="index.html"> Trang chủ</a>
+            <a href="index.html" class="current" target="_blank"> Trang chủ</a>
           </li>
           <li>
-            <a href="endow_details.html"> Khuyến mại</a>
+            <a href="endow_details.html" target="_blank"> Khuyến mại</a>
           </li>
           <li>
-            <a href="news.html"> Tin tức</a>
+            <a href="news.html" target="_blank"> Tin tức</a>
           </li>
           <li>
-            <a href="index.html"> Giới thiệu</a>
+            <a href="index.html" target="_blank"> Giới thiệu</a>
           </li>
           <li>
-            <a href="news.html"> Liên hệ</a>
+            <a href="news.html" target="_blank"> Liên hệ</a>
           </li>
           <li>
-            <a href="index.html">
+            <a href="index.html" target="_blank">
               <i class="fas fa-globe-americas"></i>
               <i class="fas fa-sort-down"></i> Vietnamese
             </a>
@@ -48,37 +51,47 @@
             </ul>
           </li>
           <li>
-            <a href="index.html"><i class="fas fa-user"></i> Đăng nhập</a>
+            <a href="index.html" target="_blank"><i class="fas fa-user"></i> Đăng nhập</a>
           </li>
           <li>
-            <a href="index.html"><i class="fas fa-user-plus"></i> Đăng ký</a>
+            <a href="index.html" target="_blank"><i class="fas fa-user-plus"></i> Đăng ký</a>
           </li>
         </ul>
       </nav>
-      <div class="header-showcase">
-        <h1 class="header-showcase-title">
-          Chuỗi khách sạn nhượng quyền hàng đầu Việt Nam
-        </h1>
-        <p class="header-showcase-text py-1">
-          Hơn 1000 phòng khách sạn 5 sao chuẩn quốc tế
-        </p>
-      </div>
-      <div class="header-find py-3">
-        <form action="">
-          <input type="text" placeholder="Tìm khách sạn, thành phố  gần nhất" />
-          <input type="text" placeholder="T2, 17/02 - T3, 18/02" />
-          <input type="text" placeholder="2 phòng,1 người lớn,2 trẻ em" />
-          <input type="text" placeholder="Khách sạn 5 sao" />
-          <div class="submit-btn">
-            <a href="search.html" class="btn btn-info">Tìm kiếm</a>
-          </div>
-        </form>
-        <p class="text-result logo-color py-3 text-center">
-          Có 100 khách sạn có phòng theo ý bạn
-        </p>
+      <div class="show-bars d-hidden">
+        <div class="show-bar show-bar-1"></div>
+        <div class="show-bar show-bar-2"></div>
+        <div class="show-bar show-bar-3"></div>
       </div>
     </div>
   </header>
+  <!-- show case area -->
+  <div id="show-case">
+    <div class="header-showcase text-center">
+      <h1 class="header-showcase-title">
+        Chuỗi khách sạn nhượng quyền hàng đầu Việt Nam
+      </h1>
+      <p class="header-showcase-text py-1">
+        Hơn 1000 phòng khách sạn 5 sao chuẩn quốc tế
+      </p>
+    </div>
+    <div class="form-find py-3">
+      <form action="" class="form-group=-search">
+        <input type="text" placeholder="Tìm khách sạn, thành phố gần nhất" />
+        <input type="text" placeholder="T2, 17/02 - T3, 18/02" />
+        <input type="text" placeholder="2 phòng,1 người lớn,2 trẻ em" />
+        <input type="text" placeholder="Khách sạn 5 sao" />
+        <input type="submit" class="btn  submit-btn" value="Tìm kiếm">
+      </form>
+      <p class="text-center text-logo py-3">
+        Có <span class="number-hotel-ok">
+          100
+        </span>
+         khách sạn vừa ý bạn
+      </p>
+    </div>
+  </div>
+  <!-- filter hotel section -->
   <section id="filter-hotel" class="py-4"> 
     <div class="container text-left">
       <div class="group-choices">
@@ -392,7 +405,6 @@
     <div class="container text-left">
         <aside>
           <div class="hotel-map">
-            This is a map
           </div>
           <div class="list-aside-hotel">
             <div class="items">
@@ -641,14 +653,15 @@
                   <div class="endow-message success-color my-5">
                     <span class="endow-message-hour border-dashed">
                       GIẢM GIÁ 24H
-                    </span>
-                    
+                    </span>  
                   </div>
                   <div class="hot-sales-card" >
                     <span class="bg-red text-small">Đang bán chạy</span>
-                     <span class="text-danger my-3 d-inline-block">
-                      Lần đặt gần nhất cách đây <span class="hour-book-hotel-latest">3</span>  giờ 
-                    </span>
+                     <p class="text-danger my-3">
+                      Lần đặt gần nhất cách đây
+                       <span class="hour-book-hotel-latest">3</span>
+                         giờ 
+                     </p>
                   </div>
                 </div>
                 <div class="hotel-item-price">
@@ -761,9 +774,9 @@
                   </div>
                   <div class="hot-sales-card">
                     <span class="bg-red text-small">Đang bán chạy</span>
-                    <span class="text-danger my-3 d-inline-block">
+                    <p class="text-danger my-3">
                       Lần đặt gần nhất cách đây <span class="hour-book-hotel-latest">3</span> giờ
-                    </span>
+                    </p>
                   </div>
                 </div>
                 <div class="hotel-item-price">
@@ -867,9 +880,9 @@
                   </div>
                   <div class="hot-sales-card">
                     <span class="bg-red text-small">Đang bán chạy</span>
-                    <span class="text-danger my-3 d-inline-block">
+                    <p class="text-danger my-3">
                       Lần đặt gần nhất cách đây <span class="hour-book-hotel-latest">3</span> giờ
-                    </span>
+                    </p>
                   </div>
                 </div>
                 <div class="hotel-item-price">
@@ -976,9 +989,9 @@
                   </div>
                   <div class="hot-sales-card">
                     <span class="bg-red text-small">Đang bán chạy</span>
-                    <span class="text-danger my-3 d-inline-block">
+                    <p class="text-danger my-3">
                       Lần đặt gần nhất cách đây <span class="hour-book-hotel-latest">3</span> giờ
-                    </span>
+                    </p>
                   </div>
                 </div>
                 <div class="hotel-item-price">
@@ -1082,9 +1095,9 @@
                   </div>
                   <div class="hot-sales-card">
                     <span class="bg-red text-small">Đang bán chạy</span>
-                    <span class="text-danger my-3 d-inline-block">
+                    <p class="text-danger my-3">
                       Lần đặt gần nhất cách đây <span class="hour-book-hotel-latest">3</span> giờ
-                    </span>
+                    </p>
                   </div>
                 </div>
                 <div class="hotel-item-price">
@@ -1189,9 +1202,9 @@
                   </div>
                   <div class="hot-sales-card">
                     <span class="bg-red text-small">Đang bán chạy</span>
-                    <span class="text-danger my-3 d-inline-block">
+                    <p class="text-danger my-3">
                       Lần đặt gần nhất cách đây <span class="hour-book-hotel-latest">3</span> giờ
-                    </span>
+                    </p>
                   </div>
                 </div>
                 <div class="hotel-item-price">
@@ -1353,5 +1366,7 @@
 
   <script src="./js/main.js"></script>
 </body>
-
+  <script async defer src="https://maps.googleapis.com/maps/api/js?AIzaSyCoTa4cKFWV5oKtmWK3xxw596h7DxZ-nx0&callback=initMap">
+  </script>
 </html>
+
