--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
       integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <header id="header">
-      <div class="container">
-        <nav id="main-nav" class="py-1">
-          <h5 class="main-nav-logo">
-            <a href="index.html" id="logo" target="_blank">
-              <i class="fas fa-layer-group"> 
+      <div class="header-container">
+        <nav class="main-nav" class="py-1">
+          <div class="main-logo-box">
+            <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
+              <i class="fas fa-layer-group">
               </i> MANDALA INN
-              </a
-            >
-          </h5>
+            </a>
+          </div>
           <ul class="nav-bar">
             <li>
               <a href="index.html" class="current" target="_blank"> Trang chủ</a>
@@ -56,28 +57,33 @@
             </li>
           </ul>
         </nav>
-        <div class="header-showcase">
-          <h1 class="header-showcase-title">
-            Chuỗi khách sạn nhượng quyền hàng đầu Việt Nam
-          </h1>
-          <p class="header-showcase-text py-1">
-            Hơn 1000 phòng khách sạn 5 sao chuẩn quốc tế
-          </p>
+        <div class="show-bars d-hidden">
+          <div class="show-bar show-bar-1"></div>
+          <div class="show-bar show-bar-2"></div>
+          <div class="show-bar show-bar-3"></div>
         </div>
-        <div class="header-find py-1">
-          <form action="">
-            <input
-              type="text"
-              placeholder="Tìm khách sạn, thành phố gần nhất"
-            />
-            <input type="text" placeholder="T2, 17/02 - T3, 18/02" />
-            <input type="text" placeholder="2 phòng,1 người lớn,2 trẻ em" />
-            <input type="text" placeholder="Khách sạn 5 sao" />
-            <div class="submit-btn"><a href="search.html" class="btn btn-info">Tìm kiếm</a></div>
-          </form>
         </div>
-      </div>
-    </header>
+        </header>
+        <!-- show case area -->
+        <div id="show-case">
+          <div class="header-showcase text-center">
+            <h1 class="header-showcase-title">
+              Chuỗi khách sạn nhượng quyền hàng đầu Việt Nam
+            </h1>
+            <p class="header-showcase-text py-1">
+              Hơn 1000 phòng khách sạn 5 sao chuẩn quốc tế
+            </p>
+          </div>
+          <div class="form-find py-3">
+            <form action="" class="form-group=-search">
+              <input type="text" placeholder="Tìm khách sạn, thành phố gần nhất" />
+              <input type="text" placeholder="T2, 17/02 - T3, 18/02" />
+              <input type="text" placeholder="2 phòng,1 người lớn,2 trẻ em" />
+              <input type="text" placeholder="Khách sạn 5 sao" />
+              <input type="submit" class="btn  submit-btn" value="Tìm kiếm">
+            </form>
+          </div>
+        </div>
     <div class="main-banner">
       <img src="./img/main_banner.png" alt="Main advertise banner" />
       <button class="main-banner-next-right">
@@ -88,10 +94,10 @@
     </div>
     <section id="combo-deals" class="py-3">
       <div class="container">
-        <h3 class="combo-deals-title my-1">
+        <h3 class="text-center combo-deals-title my-1">
           <i class="fas fa-satellite"></i> Combo | Deals Giờ Vàng
         </h3>
-        <div class="cards py-3">
+        <div class="cards py-5">
           <div class="card">
             <img src="./img/bed1.jpg" alt="" />
             <div class="hotel-infos">
@@ -177,13 +183,14 @@
             </div>
           </div>
           <button class="hotel-next-right">
-            <i class="fas fa-chevron-right fa-3x"></i></button>
+            <i class="fas fa-chevron-right fa-3x"></i>
+          </button>
             <button class="hotel-next-left">
             <i class="fas fa-chevron-left fa-3x"></i>
           </button>
         </div>
-        <div class="list-next-hotels my-6">
-          <a href="#" class="btn next-hotels"
+        <div class="list-next-hotels m-center my-6">
+          <a href="#" class="btn btn-info"
             >Xem thêm <i class="fas fa-chevron-right"></i
           ></a>
         </div>
@@ -208,7 +215,7 @@
     <!-- other locations -->
     <section id="other-locations " class=" py-4 text-center text-dark">
       <div class="container">
-        <h3>Khám phá thêm những địa điểm khác</h3>
+        <h3 class="other-locations-title">Khám phá thêm những địa điểm khác</h3>
         <p class="py-1">Những điểm đến ưa thích của du khách</p>
         <div class="locations py-2">
           <div class="location">
