--- a/news.html
+++ b/news.html
@@ -18,27 +18,27 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
- 
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
-
   <body>
     <header id="header">
-      <div class="container">
-        <nav id="main-nav" class="py-1">
-          <h5 class="main-nav-logo">
-            <a href="index.html" id="logo" target="_blank"
-              ><i class="fas fa-layer-group"></i> MANDALA INN</a
-            >
-          </h5>
+      <div class="header-container">
+        <nav class="main-nav" class="py-1">
+          <div class="main-logo-box">
+            <a class="main-nav-logo text-logo" href="index.html" id="logo" target="_blank">
+              <i class="fas fa-layer-group">
+              </i> MANDALA INN
+            </a>
+          </div>
           <ul class="nav-bar">
             <li>
-              <a href="index.html" target="_blank"> Trang chủ</a>
+              <a href="index.html" class="current" target="_blank"> Trang chủ</a>
             </li>
             <li>
               <a href="endow_details.html" target="_blank"> Khuyến mại</a>
             </li>
             <li>
-              <a href="news.html" class="current" target="_blank"> Tin tức</a>
+              <a href="news.html" target="_blank"> Tin tức</a>
             </li>
             <li>
               <a href="index.html" target="_blank"> Giới thiệu</a>
@@ -47,7 +47,7 @@
               <a href="news.html" target="_blank"> Liên hệ</a>
             </li>
             <li>
-              <a href="index.html">
+              <a href="index.html" target="_blank">
                 <i class="fas fa-globe-americas"></i>
                 <i class="fas fa-sort-down"></i> Vietnamese
               </a>
@@ -63,6 +63,11 @@
             </li>
           </ul>
         </nav>
+        <div class="show-bars d-hidden">
+          <div class="show-bar show-bar-1"></div>
+          <div class="show-bar show-bar-2"></div>
+          <div class="show-bar show-bar-3"></div>
+        </div>
       </div>
     </header>
     <div class="main-banner">
