--- a/golden_charm.html
+++ b/golden_charm.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./css/tablets.css" />
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/landing_page.css">
+    <link rel="stylesheet" href="./css/ipad.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
       integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
@@ -64,7 +66,6 @@
       </div>
     </header>
     <!-- destination hotel -->
-    <div style="margin-top:50px"></div>
     <section class="hotel-destination">
       <div class="container">
         <div class="hotel-destination-details">
@@ -83,9 +84,7 @@
             </h5>
             <p class="hotel-location">
               <i class="fas fa-map-marker-alt py-0 text-small">
-
               </i> Hoang Lien Son Str, Sapa, Lao Cai
-              
             </p>
             <div class="rating">
               <i class="fas fa-star-half-alt logo-color"></i>
