--- a/news_detail1.html
+++ b/news_detail1.html
@@ -10,9 +10,11 @@
   <link rel="stylesheet" href="./css/tablets.css" />
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/landing_page.css">
+  <link rel="stylesheet" href="./css/ipad.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
@@ -78,7 +80,7 @@
     <div class="container text-left text-dark">
       <div class="news">
         <div class="news-left destination-news news-1">
-            <h3 class="news-1-title text-large">
+            <h3 class="news-1-title text-medium">
               Resort trên cây ở Mexico: Có cả trăm góc sống ảo "đẹp tung chảo" 
               nhưng chỉ dành cho khách du lịch trên 18 tuổi
             </h3>
@@ -104,7 +106,7 @@
             </div>
             <hr class="my-4">
             <div class="news-1-content">
-              <div class="news-1-content-open text-medium py-4">
+              <div class="news-1-content-open text-small py-4">
                 Đã bao giờ bạn tưởng tượng ra rằng mình sẽ ngủ ở một nơi nằm trên cây, lại không có
                 wifi, đèn điện, điều hoà chưa? Nghe có vẻ kì lạ nhưng thực tế vẫn có không ít những
                 khu nghỉ dưỡng hay resort cao cấp không nằm dưới mặt đất như bình thường mà
@@ -230,7 +232,7 @@
               hiện nay, nhưng sự thật...
             </p>
           </div>
-          <div class="item  px-4">
+          <div class="item px-4">
             <img src="./img/travel6.jpg" alt="" />
             <a href="#">
               <h5 class="item-link">
