--- a/search_results.html
+++ b/search_results.html
@@ -9,9 +9,11 @@
   <link rel="stylesheet" href="./css/tablets.css" />
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/landing_page.css">
+  <link rel="stylesheet" href="./css/ipad.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
@@ -76,7 +78,7 @@
       </p>
     </div>
     <div class="form-find py-3">
-      <form action="" class="form-group=-search">
+      <form action="" class="form-group-search">
         <input type="text" placeholder="Tìm khách sạn, thành phố gần nhất" />
         <input type="text" placeholder="T2, 17/02 - T3, 18/02" />
         <input type="text" placeholder="2 phòng,1 người lớn,2 trẻ em" />
