--- a/all_endows.html
+++ b/all_endows.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mandalla | Thiên đường nghỉ dưỡng cho bạn và gia đình</title>
-  
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/tablets.css" />
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/landing_page.css">
+  <link rel="stylesheet" href="./css/ipad.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
