--- a/endow_details.html
+++ b/endow_details.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,9 +9,11 @@
   <link rel="stylesheet" href="./css/tablets.css" />
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/landing_page.css">
+  <link rel="stylesheet" href="./css/ipad.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
@@ -72,57 +73,57 @@
     <button class="main-banner-next-right">
       <i class="fas fa-chevron-right fa-3x"></i>
     </button>
-      <button class="main-banner-next-left">
+    <button class="main-banner-next-left">
       <i class="fas fa-chevron-left fa-3x"></i>
     </button>
   </div>
 
   <!-- endow details section -->
   <section id="endow-details">
-      <div class="container text-center">
-        <div class="endow-details-top">
-          <h1 class="text-large logo-color">
-            <i class="fas fa-crown"></i> Thứ Sáu TPBank tặng ưu đãi 5 sao! <i class="fas fa-crown"></i>
-          </h1>
-          <p>
-            🥂 Đâu cần là "sao" mới nghỉ dưỡng tại khách sạn 5 sao!
-          </p>
-          <p>
-            Có ưu đãi TPBank để nhẹ phần chi phí rồi, tận hưởng thôi!
-          </p>
-          <p>
-            🏩 Mã TPBEST: Giảm ngay 1 triệu VND giá phòng cho giao dịch tối thiểu 2 triệu VND/đêm.
-          </p>
-          <p>
-            🎊Áp dụng khi đặt phòng từ 2 đêm tại tất cả khách sạn 4 - 5 sao toàn thế giới.
-          
-          </p>
-          <p>
-            🌡️ Số lượng có hạn.
-          </p>
-          <p>
-            <a href="#" class="text-info">📲 Mở app đặt ngay! 📲</a>
-          </p>
-        </div>
-        <div class="endow-code-box">
-            <p class="text-large">
-              Ưu đãi khách sạn
-            </p>
-            <form action="" class="py-2">
-              <p class="box-code-input my-4">
-                <i class="fas fa-cut"></i>
-                <input type="text" name="" id="" placeholder="Mã khuyến mại">
-              </p>
-              <input type="submit" value="Gửi mã" class="btn d-inline-block btn-outline">
-            </form> 
-            <p class="text-extra-small">
-              Mã ưu đãi chỉ áp dụng khi thực hiện tại ứng dụng
-            </p>
-        </div>
-        <a href="all_endows.html" class="btn btn-outline">
-          Xem tất cả khuyến mại <i class="fas fa-chevron-right"></i>
-        </a>
+    <div class="container text-center">
+      <div class="endow-details-top">
+        <h1 class="text-large logo-color">
+          <i class="fas fa-crown"></i> Thứ Sáu TPBank tặng ưu đãi 5 sao! <i class="fas fa-crown"></i>
+        </h1>
+        <p>
+          🥂 Đâu cần là "sao" mới nghỉ dưỡng tại khách sạn 5 sao!
+        </p>
+        <p>
+          Có ưu đãi TPBank để nhẹ phần chi phí rồi, tận hưởng thôi!
+        </p>
+        <p>
+          🏩 Mã TPBEST: Giảm ngay 1 triệu VND giá phòng cho giao dịch tối thiểu 2 triệu VND/đêm.
+        </p>
+        <p>
+          🎊Áp dụng khi đặt phòng từ 2 đêm tại tất cả khách sạn 4 - 5 sao toàn thế giới.
+
+        </p>
+        <p>
+          🌡️ Số lượng có hạn.
+        </p>
+        <p>
+          <a href="#" class="text-info">📲 Mở app đặt ngay! 📲</a>
+        </p>
       </div>
+      <div class="endow-code-box">
+        <p class="text-large">
+          Ưu đãi khách sạn
+        </p>
+        <form action="" class="py-2">
+          <p class="box-code-input my-4">
+            <i class="fas fa-cut"></i>
+            <input type="text" name="" id="" placeholder="Mã khuyến mại">
+          </p>
+          <input type="submit" value="Gửi mã" class="btn d-inline-block btn-outline">
+        </form>
+        <p class="text-extra-small">
+          Mã ưu đãi chỉ áp dụng khi thực hiện tại ứng dụng
+        </p>
+      </div>
+      <a href="all_endows.html" class="btn-outline">
+        Xem tất cả khuyến mại <i class="fas fa-chevron-right"></i>
+      </a>
+    </div>
   </section>
 
   <!-- support automatic message -->
