--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/tablets.css" />
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/landing_page.css">
+    <link rel="stylesheet" href="./css/ipad.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
@@ -18,6 +19,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
