--- a/payment3.html
+++ b/payment3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +8,13 @@
   <link rel="stylesheet" href="./css/tablets.css" />
   <link rel="stylesheet" href="./css/mobile.css">
   <link rel="stylesheet" href="./css/landing_page.css">
+  <link rel="stylesheet" href="./css/ipad.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
     integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
   <header id="header">
     <div class="header-container">
@@ -66,8 +66,8 @@
     </div>
   </header>
   <!-- payment section -->
-  <section id="payment" class="">
-    <div class="steps">
+  <section id="payment">
+    <div class="steps step-3">
       <span class="step-number">
         1
       </span>
@@ -121,7 +121,7 @@
               26 thg 2 2020 - 27 thg 2 2020 (1 đêm)
             </p>
             <p class="text-small mt-1">
-              2 người trong phòng tập thể 6 giường - Nam & Nữ
+              2 người/ phòng/ 6 giường - Nam & Nữ
             </p>
             <p class="my-1">
               <i class="fas fa-users"> 1 Phòng , 2 người lớn </i>
