--- a/payment2.html
+++ b/payment2.html
@@ -84,13 +84,13 @@
     </div>
     <div class="container pb-5">
       <main class="step-info step-2">
-        <div class="text-medium">
+        <div class="text-medium py-2">
           <span class="success-color"><i class="fas fa-lock"></i> Thanh toán an toàn</span>
           <span class="text-small">Tất cả thông tin thẻ đều được mã hóa, được bảo vệ và đảm bảo an
             toàn.</span>
         </div>
         <div class="pay">
-          <div class="pay-header my-2 py-2 pl-2">
+          <div class="pay-header py-2 pl-2">
             <i class="far fa-money-bill-alt"></i> Thanh toán điện tử
           </div>
           <div class="group-bank">
@@ -109,10 +109,10 @@
             <form action="">
               <div class="form-control">
                 <input type="radio" name="credit" id="" class="d-inline" />
-                <label>Thẻ tín dụng/Ghi nợ</label>
+                <label class="text-small">Thẻ tín dụng/Ghi nợ</label>
                 <br />
                 <input type="radio" name="credit" id="" class="d-inline" />
-                <label>Thanh toán sau</label>
+                <label class="text-small">Thanh toán sau</label>
               </div>
               <div class="form-control ">
                 <input type="checkbox" name="" id="" /> Nhận email khuyến mãi
@@ -179,13 +179,15 @@
                 <p class="text-small">
                   Nếu bạn có mã khuyến mãi, xin vui lòng nhập vào ô bên dưới.
                 </p>
-                <label for="endow_code" class="text-medium mt-2 d-inline-block">Hãy nhập mã khuyến mãi</label>
+                <label for="endow_code" class="text-medium mt-2 d-inline-block">
+                  Hãy nhập mã khuyến mãi
+                </label>
                 <input type="text" />
               </form>
             </div>
             <hr class="my-3" />
             <div class="sales-price">
-              <p class="text-medium bg-red d-inline-block text-right">
+              <p class="text-medium bg-red d-inline-block">
                 Giá giảm 75% hôm nay
               </p>
               <div class="sale-price">
@@ -216,15 +218,14 @@
                   <p>
                     Giá gốc(1 phòng/đêm)
                   </p>
-
-                  <p class="text-extra-small text-light">
-                    Phí dịch vụ 10%, Thuế 7%
-                  </p>
                 </p>
                 <p>
                   162.205 ₫
                 </p>
               </div>
+              <p class="text-extra-small text-light">
+                Phí dịch vụ 10%, Thuế 7%
+              </p>
             </div>
           </div>
         </div>
