--- a/payment1.html
+++ b/payment1.html
@@ -67,23 +67,24 @@
       </div>
     </div>
   </header>
+  <!-- three steps btn -->
+  <div class="steps">
+    <span class="step-number current-step">
+      1
+    </span>
+    <span class="thin-bar"></span>
+    <span class="step-number">
+      2
+    </span>
+    <span class="thin-bar"></span>
+    <span class="step-number">
+      <i class="fas fa-check"></i>
+    </span>
+  </div>
   <!-- payment section -->
-  <section id="payment">
-    <div class="steps step-1">
-      <span class="step-number current-step">
-        1
-      </span>
-      <span class="thin-bar"></span>
-      <span class="step-number">
-        2
-      </span>
-      <span class="thin-bar"></span>
-      <span class="step-number">
-        <i class="fas fa-check"></i>
-      </span>
-    </div>
+  <section id="payment" class="step-1">
     <div class="container pb-5">
-      <main class="step-info step-1">
+      <main class="step-info step-1 bg-light-blue">
         <p class="text-medium my-3">
           Vui lòng điền thông tin của bạn
         </p>
@@ -97,7 +98,6 @@
               <label for="email">Email</label>
               <input type="email" id="email" name="email" />
             </div>
-
             <div class="form-group-inline">
               <div class="form-inline-control">
                 <label for="phone_number">Số điện thoại</label>
@@ -250,15 +250,15 @@
                   <p>
                     Giá gốc(1 phòng/đêm)
                   </p>
-
-                  <p class="text-extra-small text-light">
-                    Phí dịch vụ 10%, Thuế 7%
-                  </p>
                 </p>
                 <p>
                   162.205 ₫
                 </p>
+
               </div>
+              <p class="text-extra-small text-light">
+                Phí dịch vụ 10%, Thuế 7%
+              </p>
             </div>
           </div>
         </div>
