some more respnsive

--- a/search_results.html
+++ b/search_results.html
@@ -470,7 +470,7 @@
             </div>
             <div class="item">
               <a href="#" class="hotel-link">
-                <img src="./img/hotel_sm7.jpg" alt="">
+                <img src="./img/hotel_sm3.jpg" alt="">
               </a>
               <div class="item-info">
                 <h5 class="text-small">
@@ -491,6 +491,34 @@
                 </p>
                 <div class="price-hotel">
                   Giá mỗi đêm rẻ nhất từ : <span class="price text-danger text-small">308.475đ</span>
+                </div>
+
+              </div>
+            </div>
+            <div class="item">
+              <a href="#" class="hotel-link">
+                <img src="./img/hotel_sm7.jpg" alt="">
+              </a>
+              <div class="item-info">
+                <h5 class="text-small">
+                  Baan Chao Mai
+                  Beach House
+                </h5>
+                <p class="text-medium star-evaluate">
+                  <i class="fas fa-star logo-color"></i>
+                  <i class="fas fa-star logo-color"></i>
+                  <i class="fas fa-star logo-color"></i>
+                  <i class="fas fa-star logo-color"></i>
+                </p>
+                <p class="comment-amount py-1">
+                  <span class="bg-success">8.3</span> Tuyệt vời
+                  <p class="comment-amount-people py-0 text-light">
+                    <span>502</span> nhận xét
+                  </p>
+                </p>
+                <div class="price-hotel">
+                  Giá mỗi đêm rẻ nhất từ : <span class="price text-danger text-small">
+                    308.475đ</span>
                 </div>
 
               </div>
@@ -612,7 +640,7 @@
                   <img src="./img/hotel18.jpg" alt="">
                   <span>
                     <img src="./img/hotel11.jpg" alt="">
-                    <a class="more-img-btn text-info text-extra-small">
+                    <a class="more-img-btn text-info text-extra-small" href="search.html" target="_blank">
                       Xem
                       tất cả
                     </a>
@@ -624,12 +652,15 @@
                   Siritrang Boutique Hotel
                 </div>
                 <div class="hotel-rating-location">
-                  <span class="hotel-rating text-logo">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </span>
+                  <div class="hotel-rating py-0">
+                    <span class="hotel-rating text-logo">
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                    </span>
+                  </div>
+
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
@@ -713,7 +744,7 @@
             <div class="hotel-item-content">
               <div class="hotel-item-img">
                 <div class="header-img">
-                  <img src="./img/bed2.jpg" alt="">
+                  <img src="./img/bed4.jpg" alt="">
                 </div>
                 <div class="list-extra-img">
                   <img src="./img/bed1.jpg" alt="">
@@ -741,12 +772,15 @@
                   Leo De Pulga Hotel
                 </div>
                 <div class="hotel-rating-location">
-                  <span class="hotel-rating text-logo">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </span>
+                  <div class="hotel-rating py-0">
+                    <span class="hotel-rating text-logo">
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                    </span>
+                  </div>
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
@@ -847,12 +881,18 @@
                   Super spa resort Da Nang
                 </div>
                 <div class="hotel-rating-location">
-                  <span class="hotel-rating text-logo">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </span>
+                  <div class="hotel-rating py-">
+                    <span class="text-logo">
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                     
+                    </span>
+                  </div>
+                  
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
@@ -926,7 +966,7 @@
             <div class="hotel-item-content">
               <div class="hotel-item-img">
                 <div class="header-img">
-                  <img src="./img/bed2.jpg" alt="">
+                  <img src="./img/hotel2.jpg" alt="">
                 </div>
                 <div class="list-extra-img">
                   <img src="./img/bed1.jpg" alt="">
@@ -957,12 +997,16 @@
                   Super spa resort Da Nang
                 </div>
                 <div class="hotel-rating-location">
-                  <span class="hotel-rating text-logo">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </span>
+                  <div class="hotel-rating py-0">
+                    <span class="text-logo">
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                    </span>
+                  </div>
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
@@ -1036,7 +1080,7 @@
             <div class="hotel-item-content">
               <div class="hotel-item-img">
                 <div class="header-img">
-                  <img src="./img/bed2.jpg" alt="">
+                  <img src="./img/hotel9.jpg" alt="">
                 </div>
                 <div class="list-extra-img">
                   <img src="./img/bed1.jpg" alt="">
@@ -1064,12 +1108,15 @@
                   Quat Lam resort 86
                 </div>
                 <div class="hotel-rating-location">
-                  <span class="hotel-rating text-logo">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </span>
+                  <div class="hotel-rating py-0">
+                    <span class="text-logo">
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                    </span>
+                  </div>
+
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
@@ -1142,7 +1189,7 @@
             <div class="hotel-item-content">
               <div class="hotel-item-img">
                 <div class="header-img">
-                  <img src="./img/bed2.jpg" alt="">
+                  <img src="./img/bed5.jpg" alt="">
                 </div>
                 <div class="list-extra-img">
                   <img src="./img/bed1.jpg" alt="">
@@ -1171,12 +1218,14 @@
                   Super spa resort Da Nang
                 </div>
                 <div class="hotel-rating-location">
-                  <span class="hotel-rating text-logo">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </span>
+                  <div class="hotel-rating py-0">
+                    <span class="hotel-rating text-logo">
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                      <i class="fas fa-star fa-2x"></i>
+                    </span>
+                  </div>
+
                   <span class="hotel-location text-info text-small">
                     <i class="fas fa-map-marker-alt"></i>
                     <span class="location-text ">
