--- a/index.html
+++ b/index.html
@@ -193,19 +193,17 @@
 
   </section>
   <!-- support automatic message -->
-  <!-- <div id="support-customer-dialogue" class="text-center text-white bg-primary py-5">
+  <div id="support-customer-dialogue" class="text-center text-white py-1">
       <a href="#top" class="go-top">
         <i class="fas fa-arrow-up"></i>
       </a>
-      <div class="dialogue my-2">
-        <p>24/7 hỗ trợ khách hàng</p>
-        <h4 class="py-3">19009876</h4>
+      <div class="dialogue">
+        <h4 class="py-0">19009876</h4>
         <div class="message-dialogue">
           <a href="#"><i class="far fa-comment-alt"></i> Bạn cần hỗ trợ?</a>
-    
         </div>
       </div>
-    </div> -->
+    </div>
   <!-- other locations -->
   <section id="other-locations" class=" py-4 text-center text-dark">
     <div class="container">
